# Canadian-Airspace-Models

./: .gitignore  Makefile  README.md  generate_tracks.py  pyproject.toml  track_generation_tool_documentation.md
.github/: copilot-instructions.md
Track Generation Tool/: test_CGT.py
src/cam_track_gen/: __init__.py  bayesian_network.py  constants.py  data_classes.py  dynamics.py  exporters.py  generator.py  legacy_api.py  track_generation_tool.py  types.py  utilities.py  validation.py  visualization.py
tests/: conftest.py  test_track_generation_tool.py
tests/performance/: ROUND_3_RESULTS.md  __init__.py  benchmark.py  profiler.py  run_performance_tests.py  test_performance.py
tests/performance/docs/: BASELINE_RESULTS.md  ROUND_1_RESULTS.md  ROUND_2_RESULTS.md  ROUND_4_RESULTS.md  ROUND_5_RESULTS.md
tests/performance/results/: benchmark_20260129_021909_baseline.json  benchmark_20260129_023328.json  benchmark_20260129_023506.json  profile_20260129_021855.txt  profile_20260129_023208.txt  profile_20260129_023416.txt
